cabal-version: 3.0
name: plutus-bls12
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
build-type: Simple

library
    exposed-modules:  Plutus.Crypto.BlsUtils
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >= 4.2 && < 5
                    , plutus-tx
                    , plutus-core